--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.6.9",
     "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
