--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev":"env-cmd -f .env.development npm run build && firebase deploy -P dev",
+    "build:prod":"env-cmd -f .env.production npm run build && firebase deploy -P prod"
+  
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "env-cmd": "^10.1.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
